# OpenCV_laneDetection

./: .gitignore  .gitlab-ci.yml  Dockerfile  Readme.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt
src/cv/: CMakeLists.txt
src/cv/task1/: algorithms.cpp  algorithms.h  main.cpp  run_all_x64.sh  test_all_x64.sh
src/cv/task1/tests/: highway.json  lane.json
